Revision history for {{ $dist->name }}:

{{$NEXT}}

v0.1.1    2021-04-29 09:21:48+01:00 Europe/London
 [Bug Fixes]
 - Remove unnecessary call to SvREADONLY.

 [Enhancements]
 - Improve performance of eq/ne checks.

v0.1.0    2021-04-28 23:04:24+01:00 Europe/London
 - Initial version released.